--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,15 @@
   <meta charset="utf-8">
   <title>PagingSimpleDataTables</title>
   <base href="/">
+
+  <script src="assets/jquery.js"></script>
+  <script src="assets/datatables.js"></script>
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="assets/datatables.css" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
-  <script src="assets/jquery.dataTables.js"></script>
 </body>
 </html>
